<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#D7CCC8"
    android:orientation="vertical"
    tools:context="com.example.user.coffeeorder.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nameHint"
                    android:id="@+id/userName_TextView"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/coffeeWale"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="20dp"
                    android:layout_marginBottom="10dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-"
                        android:textSize="24dp"
                        android:textColor="#D7CCC8"
                        android:background="#BCAAA4"
                        android:onClick="quantityDecrement"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textSize="25dp"
                        android:layout_gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:id="@+id/Coffee_Quantity_TextView"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="+"
                        android:textSize="24dp"
                        android:textColor="#D7CCC8"
                        android:background="#BCAAA4"
                        android:onClick="quantityIncrement"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/toppings"
                    android:textAllCaps="false"
                    android:textSize="20dp"
                    android:layout_marginBottom="10dp"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addMalaiCheckBox"
                    android:textColor="#A1887F"
                    android:textAllCaps="false"
                    android:paddingLeft="24dp"
                    android:id="@+id/Add_Malai_Checkbox"
                    android:onClick="AddTopping"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addChocolateCheckBox"
                    android:textColor="#A1887F"
                    android:textAllCaps="false"
                    android:paddingLeft="24dp"
                    android:id="@+id/Add_Chocolate_Checkbox"
                    android:onClick="AddTopping"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/summary"
                    android:textAllCaps="false"
                    android:textSize="20dp"
                    android:layout_marginBottom="20dp"
                    android:id="@+id/Summary_Header_TextView"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAllCaps="false"
                    android:textSize="15dp"
                    android:layout_marginBottom="20dp"
                    android:id="@+id/Summary_Order_TextView"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/orderButton"
                    android:textColor="#D7CCC8"
                    android:background="#BCAAA4"
                    android:onClick="submitCoffeeOrder" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
